some new funcionalities
